content/_generated-doc/2.7/config/quarkus-jacoco.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-jacoco_configuration]]link:#quarkus-jacoco_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.data-file]]`link:#quarkus-jacoco_quarkus.jacoco.data-file[quarkus.jacoco.data-file]`

[.description]
--
The jacoco data file
--|string 
|`jacoco-quarkus.exec`


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.reuse-data-file]]`link:#quarkus-jacoco_quarkus.jacoco.reuse-data-file[quarkus.jacoco.reuse-data-file]`

[.description]
--
Whether to reuse (`true`) or delete (`false`) the jacoco data file on each run.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.report]]`link:#quarkus-jacoco_quarkus.jacoco.report[quarkus.jacoco.report]`

[.description]
--
If Quarkus should generate the Jacoco report
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.output-encoding]]`link:#quarkus-jacoco_quarkus.jacoco.output-encoding[quarkus.jacoco.output-encoding]`

[.description]
--
Encoding of the generated reports.
--|string 
|`UTF-8`


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.title]]`link:#quarkus-jacoco_quarkus.jacoco.title[quarkus.jacoco.title]`

[.description]
--
Name of the root node HTML report pages.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.footer]]`link:#quarkus-jacoco_quarkus.jacoco.footer[quarkus.jacoco.footer]`

[.description]
--
Footer text used in HTML report pages.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.source-encoding]]`link:#quarkus-jacoco_quarkus.jacoco.source-encoding[quarkus.jacoco.source-encoding]`

[.description]
--
Encoding of the source files.
--|string 
|`UTF-8`


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.includes]]`link:#quarkus-jacoco_quarkus.jacoco.includes[quarkus.jacoco.includes]`

[.description]
--
A list of class files to include in the report. May use wildcard characters (++*++ and ?). When not specified everything will be included.
--|list of string 
|`**`


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.excludes]]`link:#quarkus-jacoco_quarkus.jacoco.excludes[quarkus.jacoco.excludes]`

[.description]
--
A list of class files to exclude from the report. May use wildcard characters (++*++ and ?). When not specified nothing will be excluded.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.report-location]]`link:#quarkus-jacoco_quarkus.jacoco.report-location[quarkus.jacoco.report-location]`

[.description]
--
The location of the report files.
--|string 
|`jacoco-report`

|===